--- a/nlp.html
+++ b/nlp.html
@@ -145,13 +145,13 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
+<h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
     Software Developer?Natural Language Processing  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -212,7 +212,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA Atlanta</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -228,7 +228,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-09-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/holaemi/7df2345c-b034-4294-bd58-e86a23d7fd8f'>Emi Labs - NLP Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/holaemi/7df2345c-b034-4294-bd58-e86a23d7fd8f'>Emi Labs - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
@@ -236,7 +236,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
-<h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -326,7 +326,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -423,7 +423,7 @@ translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 GumGum enables highly impactful digital advertising campaigns with contextual
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
